content/v1.4.5/zh/api/core-extra/EnumHelper.md
---
title: "EnumHelper"
description: "EnumHelper 的自动生成类参考。"
---
# EnumHelper

**Namespace:** TaleWorlds.Library
**Module:** TaleWorlds.Library
**Type:** `internal static class EnumHelper<T1>`
**Base:** 无
**File:** `bin/TaleWorlds.Library/TaleWorlds.Library/EnumHelper.cs`

## 概述

`EnumHelper` 是一个帮助类，通常提供不依赖实例状态的静态辅助逻辑。

## 心智模型

把 `EnumHelper` 当作一个 Helper 型扩展点来理解：先确认谁创建它、谁持有它、谁调用它，再决定是继承、组合还是只读使用。

## 主要方法

### Overlaps
`public static bool Overlaps(sbyte p1, sbyte p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(byte p1, byte p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(short p1, short p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(ushort p1, ushort p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(int p1, int p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(uint p1, uint p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(long p1, long p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### Overlaps
`public static bool Overlaps(ulong p1, ulong p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 Overlaps 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.Overlaps(0, 0);
```

### ContainsAll
`public static bool ContainsAll(sbyte p1, sbyte p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(byte p1, byte p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(short p1, short p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(ushort p1, ushort p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(int p1, int p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(uint p1, uint p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(long p1, long p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### ContainsAll
`public static bool ContainsAll(ulong p1, ulong p2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否包含all。

```csharp
// 静态调用，不需要实例
EnumHelper.ContainsAll(0, 0);
```

### initProc
`public static bool initProc(T1 p1, T1 p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 initProc 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.initProc(p1, p2);
```

### initAllProc
`public static bool initAllProc(T1 p1, T1 p2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 initAllProc 对应的操作。

```csharp
// 静态调用，不需要实例
EnumHelper.initAllProc(p1, p2);
```

## 使用示例

```csharp
EnumHelper.Initialize();
```

## 参见

- [本区域目录](../)